--- a/server2/package.json
+++ b/server2/package.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "lab5-api-server",
+  "version": "1.0.0",
+  "description": "API server for Patient DB",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "mysql2": "^3.9.0"
+  }
+}
