--- a/server1/Dockerfile
+++ b/server1/Dockerfile
@@ -1,1 +1,8 @@
-
+FROM node:18-slim
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --production
+COPY . .
+# Use the PORT env variable provided by Cloud Run
+ENV PORT 8080
+CMD [ "node", "server.js" ]
